--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="nav__link"><a href="#">О НАС</a></span>
                     <a class="nav__link" href="#">ПРОЕКТЫ</a>
                     <a class="nav__link" href="#">УСЛУГИ</a>
-                    <a class="nav__link" href="#">УСЛУГИ</a>
+                    <a class="nav__link" href="#">КОНТАКТЫ</a>
                 </nav>
             </div>
 
@@ -196,6 +196,14 @@
 
         </div>  <!--/container__second-->
     </footer>  <!--/footer-->
+
+
+
+        
+        
+
+
+    </div>
 <script src="js/index.js"></script>
 </body>
 </html>
