--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <span class="footer__first-child"><a class="footer__link" href="#">О НАС</a></span>
                     <a class="footer__link" href="#">ПРОЕКТЫ</a>
                     <a class="footer__link" href="#">УСЛУГИ</a>
-                    <a class="footer__link" href="#">УСЛУГИ</a>
+                    <a class="footer__link" href="#">КОНТАКТЫ</a>
                 </nav>
 
                 <p class="footer__subtitle">студия дизайна интерьера Метрика — 2023</p>
