next commit idk

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                     <a href="#"><img src="photos/logo.png" alt="logo"></a>
                 </div>
 
-                <ul class="nav__links">
-                    <span class="nav__link"><li href="#">О НАС</li></span>
-                    <li class="nav__link" href="#">ПРОЕКТЫ</li>
-                    <li class="nav__link" href="#">УСЛУГИ</li>
-                    <li class="nav__link" href="#">КОНТАКТЫ</li>
-                </ul>
+                <nav class="nav__links">
+                    <span class="nav__link"><a href="#about">О НАС</a></span>
+                    <a class="nav__link" href="#project">ПРОЕКТЫ</a>
+                    <a class="nav__link" href="#service">УСЛУГИ</a>
+                    <a class="nav__link" href="#contact">КОНТАКТЫ</a>
+                </nav>
             </div>
 
         </div>  <!--/container-->
@@ -53,7 +53,7 @@
         </div>  <!--/container-->
     </section>  <!--/intro-->
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             
             <h2 class="about__us">О НАС</h2>
@@ -67,11 +67,11 @@
         </div>  <!--/container-->
     </section>  <!--/about-->
 
-    <section class="projects">
+    <section class="projects" id="project">
         <div class="container">
 
             <div class="wrapper__projects">
-                <h2 class="projects__main-title">ПРОЕКТЫ</h2>
+                <h2 class="projects__main-title" id>ПРОЕКТЫ</h2>
 
                     <div class="project__first">
                         <div class="project__image">
@@ -109,7 +109,7 @@
         </div>  <!--/container-->
     </section>  <!--/projects-->
 
-    <section class="services">
+    <section class="services" id="service">
         <div class="container__second">
             <div class="container">
                 <h2 class="services__title">Услуги</h2>
@@ -159,7 +159,7 @@
         </div>  <!--/container__second-->
     </section>  <!--/services-->
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <div class="wrapper__contact">
 
@@ -181,12 +181,12 @@
         <div class="container__second">
             <div class="wrapper__footer">
                 
-                <ul class="footer__links">
-                    <span class="footer__first-child"><li href="#">О НАС</li></span>
-                    <li class="footer__link" href="#">ПРОЕКТЫ</li>
-                    <li class="footer__link" href="#">УСЛУГИ</li>
-                    <li class="footer__link" href="#">КОНТАКТЫ</li>
-                </ul>
+                <nav class="footer__links">
+                    <span class="footer__first-child"><a href="#about" class="footer__link">О НАС</a></span>
+                    <a class="footer__link" href="#project">ПРОЕКТЫ</a>
+                    <a class="footer__link" href="#service">УСЛУГИ</a>
+                    <a class="footer__link" href="#contact">КОНТАКТЫ</a>
+                </nav>
 
                 <p class="footer__subtitle">студия дизайна интерьера Метрика — 2023</p>
 
